[package]
name = "hilbench-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
log = "0.4"
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
reqwest = "0.12"
tokio-serial = "5.4"
rand = "0.8.5"
heapless = "0.8.0"
anyhow = "1"
